--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="cursor"></div>
     <div class="follower"></div>
     <div class="first">
-      <h2 class="first__ttl">Powered By RyoOgura</h2>
+      <h2 class="first__ttl">Powura</h2>
     </div>
     <div class="top">
       <video
