--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
           <li class="cat__works cat-list btn">Works</li>
           <li class="cat__about cat-list btn">About</li>
           <li class="cat__contact cat-list btn">Contact</li>
+          <a
+            href="https://master.d2qrnepigha0wa.amplifyapp.com/"
+            target="_blank"
+            class="cat-list btn cat-list-new"
+            >O-gram</a
+          >
         </ul>
       </div>
     </div>
@@ -120,7 +126,18 @@
         <div class="works__prev">
           <i class="far btn fa-arrow-alt-circle-up works__prev-btn"></i>
         </div>
-        <li class="works__list active works__5">
+        <li class="works__list works__5 active">
+          <div class="works__inner">
+            <a
+              href="https://master.d2qrnepigha0wa.amplifyapp.com/"
+              target="_blank"
+              class="works__link"
+            >
+              <p class="works__ttl">O-gram(SPAポートフォリオ)</p>
+            </a>
+          </div>
+        </li>
+        <li class="works__list works__4">
           <div class="works__inner">
             <a
               href="http://hf.aeonsquare.net/shingu/?bannerid=sh25_&exmid=CPC&utm_source=google&utm_medium=paidsearch&utm_campaign=f_shingu_PS_G&utm_content=f_shingu_PS_G_4function_1007&gclid=CjwKCAjw0On8BRAgEiwAincsHEqduuRtW1v_iKyQ5zN7bGC3747qXk7d3mor0YFiwOvbNQ1fRmA3exoC6QQQAvD_BwE"
@@ -131,7 +148,7 @@
             </a>
           </div>
         </li>
-        <li class="works__list works__4">
+        <li class="works__list works__3">
           <div class="works__inner">
             <a
               href="http://www.diane-bonheur.com/"
@@ -142,7 +159,7 @@
             </a>
           </div>
         </li>
-        <li class="works__list works__3">
+        <li class="works__list works__2">
           <div class="works__inner">
             <a
               href="http://rmok.wp.xdomain.jp/"
@@ -150,17 +167,6 @@
               class="works__link"
             >
               <p class="works__ttl">東京大学女子サッカー部</p>
-            </a>
-          </div>
-        </li>
-        <li class="works__list works__2">
-          <div class="works__inner">
-            <a
-              href="https://ryo-o-gura.github.io/niseko/"
-              target="_blank"
-              class="works__link"
-            >
-              <p class="works__ttl">ニセコ白雲荘（模写）</p>
             </a>
           </div>
         </li>
@@ -204,7 +210,7 @@
           <div class="about__right-section">
             <div class="main__second-section slideIn">
               <p class="slideIn__txt">
-                横浜国立大学 教育学部 1年<br />
+                横浜国立大学 教育学部 2年<br />
                 複数のIT会社にてエンジニアとして活動中。<br />
                 現在はVueでのチーム開発を中心に動いている。
               </p>
