add: skill欄追加・修正

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
         </li>
         <li class="skills__list">
-          <p class="skills__list-ttl">AdobeXD, Illustrator, Figma</p>
+          <p class="skills__list-ttl">FinalCutProX, Motion5</p>
           <div class="skills__progress">
             <div class="skills__progress-inner skills__progress_4"></div>
           </div>
@@ -211,8 +211,10 @@
             <div class="main__second-section slideIn">
               <p class="slideIn__txt">
                 横浜国立大学 教育学部 2年<br />
-                複数のIT会社にてエンジニアとして活動中。<br />
-                現在はVueでのチーム開発を中心に動いている。
+                学校での教育の勉強と並行して、エンジニアとしてのスキルアップに努めている。<br />
+                約1年、フロントエンドエンジニアとしてVueのプロジェクトに参画<br />
+                最近は知人のYouTubeチャンネル（登録者約3300人）の編集・管理に注力している。<br />
+                FinalCutProXを用いた基本的な動画編集・Motionを用いた基礎的なアニメーションできます。<br />
               </p>
             </div>
           </div>
@@ -222,7 +224,7 @@
             <div class="main__third-section slideIn">
               <p class="slideIn__txt">
                 １番の目標は、”かっこいいパパになること”<br />
-                そのために、”多くの人に必要とされるエンジニア”を目指している。<br />
+                そのために、”多くの人に必要とされる人間”を目指している。<br />
                 学生時代はサッカー漬けの毎日。アウトドア・新しいものが大好き。<br />
               </p>
             </div>
